Projects/Salisbury/CSS/OfficialSalisburys.css
* {
  box-sizing: border-box;
}

html {
  overflow: hidden;
  height: 100vh;
}

body {
  overflow: auto;
  margin: 0;
  padding: 0;
  font-family: "Helvetica", sans-serif !important;
  background-image: url("../img/TheSalisburyAleHouseHeader.jpeg");
  background-repeat: no-repeat;
  background-size: cover;
  background-color: transparent;
  background-attachment: fixed;
  background-position: center;
  align-items: center;
  justify-content: center;
  height: 100vh;
  padding: env(safe-area-inset-top) env(safe-area-inset-right)
    env(safe-area-inset-bottom) env(safe-area-inset-left);
  cursor: pointer;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  font-family: Verdana, sans-serif !important;
}

a {
  text-decoration: none;
}

a:hover {
  cursor: pointer;
}

.standOutText {
  color: grey;
}

mark.grey {
  color: grey;
  background: none;
}

#AboutUs:hover .grey {
  color: #3b5998;
}

mark.grey:hover {
  color: #3b5998;
}

.standOutText:hover {
  color: #3b5998;
}

h1 {
  font-size: 5vh;
  color: white;
}

h2 {
  font-size: 2vh;
  color: white;
}

/* Social Media Icons */
.fa-bars {
  color: grey;
  margin: 10px !important;
  padding: 0px !important;
  overflow: auto;
}

.fa-chevron-right {
  color: grey;
  margin: 10px !important;
  padding: 0px !important;
}

.fa {
  padding: 10px;
  font-size: 15px;
  width: 40px;
  text-align: center;
  text-decoration: none;
  border-radius: 50%;
  margin: 20px 10px 20px 10px;
}

.fa:hover {
  opacity: 0.7;
  width: 40px;
}

.fa-facebook {
  background: #3b5998;
  color: white;
}

.fa-instagram {
  background: rgb(225, 48, 108);
  color: white;
}

.fa-twitter {
  background: #55acee;
  color: white;
}

/* Central Glass Container */
.glassContainer {
  width: auto;
  height: auto;
  padding: 50px 70px;
  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
  border-radius: 10px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -o-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  z-index: 1;
  background: inherit;
  overflow: hidden;
  text-align: center;
  margin: auto;
  max-width: 700px;
}

.glassContainer:before {
  content: "";
  position: absolute;
  background: inherit;
  z-index: -1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  box-shadow: inset 0 0 2000px rgba(255, 255, 255, 0.5);
  filter: blur(3px);
  margin: -20px;
  min-width: 100%;
}

/* Responsive Navbar */

.topnav img {
  float: left;
  height: 10vh;
  width: 15vw;
  max-width: 200px;
  max-height: 200px;
}

.topnav a {
  height: auto;
  width: auto;
  color: #55acee;
  text-align: center;
  padding: 2vh 0px;
  margin: 0px;
  text-decoration: none;
  font-size: 2em;
  display: inline-block;
}

.topnav a:hover {
  color: #125688;
}

.topnav a:hover .topnav a.active {
  background-color: transparent;
  color: white;
}

.topnav .icon {
  display: none;
}

footer {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  color: white;
  text-align: center;
  padding-bottom: 5px;
}

footer a {
  color: rgba(255, 255, 255, 0.8);
}

footer a:hover {
  color: white;
}

iframe {
  min-height: 640px;
  width: 100%;
  padding: 0px;
  margin: 0px;
  overflow: visible;
}

#bookingInfo {
  display: none;
  text-align: center;
  width: 100%;
  overflow: visible;
}

a#bookingInfo span {
  display: block;
}

p#bookingInfo {
  color: grey;
  padding: 10px 20px;
  margin-top: 18%;
}
#smallerLink {
  font-size: 15px;
}

#socialMediaIcons a {
  float: left;
  color: white;
  font-size: 20px;
  width: 40px;
  height: 40px;
  padding: 10px;
  margin: 20px 10px 40px 10px;
  overflow: auto;
}

@media (max-width: 280px) {
  #socialMediaIcons a {
    margin: 20px 5px;
  }
}

#socialMediaIcons a:first-child {
  margin-left: 25%;
}

#socialMediaIcons a:last-child {
  margin-right: 25%;
}

.topnav {
  position: absolute;
  top: 0;
  right: 0;
  width: auto;
  background-color: transparent;
  border: none;
  box-shadow: none;
  overflow: scroll;
}

.topnav:before {
  content: "";
  position: absolute;
  background: inherit;
  z-index: -1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  box-shadow: none;
  filter: blur(0px);
}

.topnav a {
  display: none;
}

.topnav a:first-child {
  margin-top: 20%;
}

.topnav a.icon {
  float: right;
  display: block;
}

.topnav.responsive {
  position: absolute;
  width: 100%;
  max-width: 320px;
  height: 100%;
  z-index: 100;
  padding-bottom: 70px;
  background-color: rgba(255, 255, 255, 1);
}
.topnav.responsive .icon {
  position: absolute;
  right: 0;
  top: 0;
}
.topnav.responsive a {
  float: none;
  display: block;
  text-align: center;
}

.glassContainer {
  padding: 10px;
  width: 90%;
}

#Logo {
  display: none;
}

#LogoResponsive {
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  margin: 20px;
  height: 100px;
  width: 150px;
}

#LogoResponsive img {
  height: 150;
  width: 150px;
}

.animate-slide-right {
  position: relative;
  animation: animateright 0.4s;
}
@keyframes animateright {
  from {
    right: -300px;
    opacity: 0;
  }
  to {
    right: 0;
    opacity: 1;
  }
}

@media screen and (min-width: 1300px) {
  body {
    font-size: 1.5em !important;
  }
}
@media (max-width: 900px) and (orientation: landscape) {
  .glassContainer {
    max-width: 300px;
    max-height: 250px;
  }
}

@media (min-width: 900px) and (max-width: 1000px) and (orientation: landscape) {
  .glassContainer {
    max-width: 700px;
  }
}

